Format title in 2020-03-26-content.md
Format title and adding date

--- a/_posts/2020-03-26-content.md
+++ b/_posts/2020-03-26-content.md
@@ -1,3 +1,5 @@
-#First blog: the awesome Concorde
-
+---
+title: "First blog: the awesome Concorde"
+date: 2020-03-26
+---
 The concorde was awesome. But its use has been ended due to several mysfunctions.
